# slavv2python

./: .codex-admin-cleanup.ps1  .fix_notebooks.py  .gitignore  .gitmodules  .output.txt  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  ANTIGRAVITY.md  BOTTLENECK_TODO.md  CHANGELOG.md  CONSOLIDATION_PLAN.md  CONTEXT.md  CONTRIBUTING.md  EXPERIMENTS_REVIEW.md  GEMINI.md  GOALS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  MATLAB_MAPPING.md  MODULARIZATION_PARALLEL_PLAN.md  Makefile  ORIGINAL_REQUEST.md  PI_UPDATE.md  PROJECT.md  PROJECT_STATUS.md  README.md  RESUME_INSTRUCTIONS.md  SLAVV_METHOD_EXPLAINED.md  SPRINT_PLAN.md  TODO.md  VMV_EXPORT_IMPROVEMENTS.md  WS0_SAFETY_NET_CHECKLIST.md  app.py  biome_report.txt  biome_report_v2.txt  capture_debug_log.txt  check_deleted_vertices.py  check_extra_pairs.py  (+95 more)
.agent/workflows/: regression-check.md  yolo.md
.agents/: HANDOFF.md  INDEX.md  QUICK_REFERENCE.md  README.md  docs-link-auditor.agent.md  matlab-parity-review.agent.md  matlab-parity-specialist.agent.md  python-refactor-tests.agent.md
.agents/agents/: README.md  docs-link-auditor.agent.md  matlab-parity-specialist.agent.md  (+1 more)
.claude/: HANDOFF.md  INDEX.md  QUICK_REFERENCE.md  README.md
.jules/: bolt.md
.junie/: AGENTS.md  guidelines.md
.jupyter/: jupyter_notebook_config.py
.venv-ci/: pyvenv.cfg
apps/: web_app.py
cli-wizard/: package.json  tsconfig.json
dev/: README.md  index.jsonl
docs/: ADRS.md  ADR_0001-use-python-over-matlab.md  AGENTS.md  ARCHITECTURE.md  ARCHIVE.md  ARCHIVE_2026-01-27_post_mortem.md  ARCHIVE_DEBUGGING_PROGRESS_REPORT.md  ARCHIVE_DEBUG_STATUS.md  ARCHIVE_FINAL_STATUS.md  BENCHMARKS.md  CHANGELOG.md  COMPARISON_LAYOUT.md  COMPARISON_OUTPUT_PREFLIGHT_IMPLEMENTATION_PLAN.md  COMPARISON_RESUME_TRANSPARENCY_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_MAP.md  EDGE_PARITY_IMPLEMENTATION_PLAN.md  ENVIRONMENT_SETUP.md  EXTERNAL_LIBRARY_SURVEY_2026-04-06.md  INNOVATIONS_AND_MODIFICATIONS.md  MATLAB_COVERAGE_REPORT.md  MATLAB_MAPPING.md  MATLAB_PARITY_AUDIT_CHECKLIST.md  MATLAB_TO_PYTHON_MAPPING.md  MIGRATION_GUIDE.md  ORGANIZATION_IMPROVEMENTS.md  PARITY_DEVIATIONS.md  PARITY_FINDINGS_2026-03-27.md  PARITY_HUB.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATIONS.md  PI_UPDATE.md  PORTING_SUMMARY.md  PROGRESS.md  PROJECT_EVOLUTION.md  PUBLIC_API.md  QUICK_REFERENCE.md  README.md  REPO_ORGANIZATION.md  (+11 more)
examples/: run_tutorial.py  tutorial.ipynb
experiments/: README.md
figures/: README.md  generate_matlab_python_parity_journey.py  generate_parity_claim_figures.py  parity_campaign_series.py
notebooks/: 00_Setup_and_Validation.ipynb  01_End_to_End_Comparison.ipynb  01_Run_Matlab.ipynb  04_Comparison_Dashboard.ipynb  06_Data_Management.ipynb  07_Tutorial.ipynb  0_Setup_and_Validation.ipynb  3_Data_Management.ipynb  comparison_params.json
scratch/: analyze_traces.py  check_bisect.py  check_copy_ravel.py  check_mat_types.py  check_memory.py  check_view.py  repro_import.py  repro_telemetry.py  scratch_check_oracle_trace_existence.py  scratch_count_candidates.py  scratch_get_lumen_radii.py  scratch_inspect_keys.py  scratch_inspect_setting_keys.py  scratch_offset_sweep.py  scratch_peek_radii.py  scratch_prove_discrepancy.py  scratch_simulated_validation.py  scratch_the_final_cosmic_revelation.py  test_bisect.py  verify_definitive_parity.py  verify_reordered_watershed.py
scripts/: 00_Setup_and_Validation.ipynb  01_End_to_End_Comparison.ipynb  01_Run_Matlab.ipynb  02_Debug_Matlab.ipynb  02_Run_Python.ipynb  03_Compare_Results.ipynb  03_Debug_Python.ipynb  04_Comparison_Dashboard.ipynb  04_Statistical_Analysis.ipynb  05_Statistical_Analysis.ipynb  06_Data_Management.ipynb  07_Tutorial.ipynb  0_Setup_and_Validation.ipynb  1_Comparison_Dashboard.ipynb  1_Run_Comparison.ipynb  2_Statistical_Analysis.ipynb  4_Run_Comparison.ipynb  5_Tutorial.ipynb  AUDIT_2026_05_06.md  README.md  TROUBLESHOOTING.md  align_matlab_raw_candidates.py  check_parity_run.py  cleanup_comparisons.py  compare_clean_edge_pairs_matlab.py  compare_execution_traces.py  compare_matlab_python.py  compare_traces.py  compare_watershed_strel_state.py  comparison_params.json  create_test_volume.py  dashboard_snippet.py  debug_glob.py  edge_emission_order_probe.py  edge_selection_funnel_probe.py  export_180709_crop_m.py  generate_all_manifests.py  generate_summary.py  investigate_translation_pairs.py  make_report_figures.py  (+16 more)
slavv-complete-project/: SOURCE_DIRECTORY_COMPARISON.md
slavv-matlab-docs/: mkdocs.yml
slavv-streamlit/: README.md  app.py  requirements.txt
slavv_output/: network.json
slavv_python/: __init__.py
source/: __init__.py
test_output_json/: network.json
tests/: README.md  conftest.py  repro_watershed_permissiveness.py  test_animate_strands.py  test_app_integration.py  test_app_layout.py  test_automatic_curator.py  test_choose_heuristics.py  test_chunking_lattice.py  test_comparison_setup.py  test_cropping.py  test_direction_method.py  test_discrete_tracing.py  test_edge_cases.py  test_edge_coloring.py  test_edge_direction_seeding.py  test_energy_field_storage.py  test_feature_alignment.py  test_flow_field.py  test_frangi_energy.py  test_generate_edge_directions.py  test_gradient_numba.py  test_io_utils.py  test_mat_export.py  test_mat_import.py  test_ml_model_io.py  test_ml_training.py  test_network_cycles.py  test_network_imports.py  test_network_slice.py  test_network_stats.py  test_optimized_visualization.py  test_preprocessing.py  test_profiling.py  test_progress_callback.py  test_public_api.py  test_regression_edges.py  test_sato_energy.py  test_structuring_element.py  test_uncurated_info.py  (+5 more)
tools/: comparison.py  matlab_parser.py
tutorial_output/: tutorial_parameters.json
workspace/: README.md  grep_results_float32.txt  index.jsonl  matlab_energy_map_temp_writes.txt  matlab_search_r_over_R.txt  search_results.txt  search_results_current_location.txt  search_results_distance.txt  search_results_energy.txt  tmp_comparison_params_metric_threshold_20260406.json  tmp_comparison_params_metric_threshold_50_20260406.json
(+4008 files in other folders)
