[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slavv"
version = "0.1.0"
description = "Segmentation-Less, Automated, Vascular Vectorization - Python port"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "UTFOIL Lab"},
]
keywords = ["vascular", "vectorization", "microscopy", "3D", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "h5py>=3.8.0",
    "tifffile>=2023.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "joblib>=1.3.0",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.20.0",
]
ml = [
    "tensorflow>=2.14.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
    "ipywidgets>=8.0.0",
]
dicom = [
    "pydicom>=2.0.0",
]
accel = [
    "numba>=0.58.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
all = [
    "streamlit>=1.20.0",
    "tensorflow>=2.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/UTFOIL/slavv2python"
Repository = "https://github.com/UTFOIL/slavv2python"
"Original MATLAB" = "https://github.com/UTFOIL/Vectorization-Public"

[project.scripts]
slavv-app = "slavv.apps.web_app:main"
slavv = "slavv.cli:main"

[tool.setuptools.packages.find]
where = ["source"]
include = ["slavv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["external/blender_resources", "external/Vectorization-Public", "experiments"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -p no:cacheprovider"
filterwarnings = [
    "ignore::DeprecationWarning:sklearn.*",
    "ignore::DeprecationWarning:pandas.*",
    "ignore::DeprecationWarning:numba.*",
    "ignore:.*invalid escape sequence.*:DeprecationWarning",
    "ignore:.*np.bool.*:DeprecationWarning",
    "ignore:.*np.float.*:DeprecationWarning",
]
