[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slavv"
version = "0.1.0"
description = "Segmentation-Less, Automated, Vascular Vectorization - Python port"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "UTFOIL Lab"},
]
keywords = ["vascular", "vectorization", "microscopy", "3D", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.2.0",
    "networkx>=2.6.0",
    "h5py>=3.0.0",
    "tifffile>=2021.0.0",
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
    "pandas>=3.0.0",
    "pillow>=8.0.0",
    "joblib>=1.0.0",
    "defusedxml>=0.7.1",
    "psutil>=5.8.0",
    "py-cpuinfo>=8.0.0",
    "seaborn>=0.9.0",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.56.0",
]
ml = [
    "tensorflow>=2.14.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
    "ipywidgets>=8.0.0",
]
dicom = [
    "pydicom>=2.0.0",
]
sitk = [
    "SimpleITK>=2.4.0",
]
cupy = [
    "cupy>=13.0.0",
]
zarr = [
    "zarr>=2.12.0",
]
napari = [
    "napari[all]>=0.5.0",
]
accel = [
    "numba>=0.58.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.0.0",
]
all = [
    "streamlit>=1.56.0",
    "tensorflow>=2.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "notebook>=6.4.0",
    "ipywidgets>=8.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/UTFOIL/slavv2python"
Repository = "https://github.com/UTFOIL/slavv2python"

[project.scripts]
slavv-app = "source.apps.streamlit_launcher:main"
slavv = "source.apps.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["source", "source.*"]

# ── Ruff (linter + formatter) ───────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100
src = ["source", "dev/tests"]

exclude = ["external/*"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import ordering)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B905",   # zip() without strict= (needs >=3.10)
    "UP007",  # use X | Y for union types (needs >=3.10)
    "RET504", # unnecessary assignment before return
    "SIM108", # use ternary — sometimes less readable
    "N803",   # argument name uppercase — common in scientific code
    "N806",   # variable name uppercase — common in scientific code
]

[tool.ruff.lint.isort]
known-first-party = ["source"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ── Mypy (static type checking) ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "source"
files = [
    "source/apps/cli/__init__.py",
    "source/apps/share_report.py",
    "source/apps/streamlit/app.py",
    "source/apps/streamlit_launcher.py",
    "source/apps/web_app.py",
    "source/analysis/geometry.py",
    "source/core/energy.py",
    "source/core/network.py",
    "source/core/graph/__init__.py",
    "source/core/vertices.py",
    "source/core/edge_primitives.py",
    "source/core/edge_candidates.py",
    "source/core/edge_selection.py",
    "source/core/edges.py",
    "source/core/pipeline.py",
    "source/runtime/run_state.py",
    "source/runtime/run_tracking/__init__.py",
    "source/workflows/pipeline/execution.py",
    "source/workflows/pipeline/session.py",
    "source/workflows/pipeline/artifacts.py",
    "source/workflows/pipeline/resolution.py",
]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false      # gradual typing: allow untyped for now
check_untyped_defs = true          # still check bodies of untyped functions
ignore_missing_imports = true      # don't error on 3rd-party stubs
# Keep import following shallow for now: widening the checked entrypoints helps catch
# app/runtime regressions without pulling the entire scientific stack into one typing pass.
follow_imports = "skip"
show_error_codes = true
pretty = true

# ── Pytest (unit/integration tests) ────────────────────────────────────
[tool.pytest.ini_options]
testpaths = "dev/tests"
norecursedirs = [
    "external",
    "external/blender_resources",
    "external/Vectorization-Public",
    "experiments",
    ".pytest_tmp",
    "dev/tmp_tests",
    "tmp_fixture",
]
python_files = "test_*.py"
addopts = "-v --tb=short -p no:cacheprovider"
markers = [
    "unit: fast unit tests",
    "integration: integration tests across components",
    "ui: Streamlit/visualization UI-facing tests",
    "diagnostic: environment and setup diagnostics",
    "slow: long-running tests",
    "regression: regression-focused behavior tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:sklearn.*",
    "ignore::DeprecationWarning:pandas.*",
    "ignore::DeprecationWarning:numba.*",
    "ignore:.*invalid escape sequence.*:DeprecationWarning",
    "ignore:.*np.bool.*:DeprecationWarning",
    "ignore:.*np.float.*:DeprecationWarning",
]

